# awards

./: .gitignore  019dc392-31.xlsx  Data_Collection (3)2.xlsx  README.md  package-lock.json  package.json
apps/api/: .env.example  pyproject.toml  requirements.txt
apps/api/app/: __init__.py  auth.py  config.py  database.py  dependencies.py  importer.py  main.py  models.py  schemas.py
apps/api/data/: awards.db  import_issues_report.json
apps/api/tests/: conftest.py  test_api.py  test_importer.py
apps/web/: package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
apps/web/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/awards/: page.tsx
apps/web/app/awards/[id]/: page.tsx
apps/web/app/awards/[id]/winners/: page.tsx
apps/web/components/: admin-shell.test.tsx  admin-shell.tsx  award-detail-panel.test.tsx  award-detail-panel.tsx  awards-browser.tsx  egyptian-winners-section.test.tsx  egyptian-winners-section.tsx  featured-winners-section.tsx  hero-section.tsx  landing-search.test.tsx  landing-search.tsx  navbar.tsx  section-wrapper.tsx  statistics-section.tsx  story-section.tsx  why-platform-section.tsx
apps/web/lib/: api.ts  content.ts  featured-winners.ts  types.ts
