[project]
name = "awards-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.135.3",
    "httpx==0.28.1",
    "openpyxl==3.1.5",
    "pydantic-settings==2.13.1",
    "pypdf==6.9.2",
    "python-multipart==0.0.22",
    "pytest==9.0.2",
    "sqlalchemy==2.0.49",
    "uvicorn==0.43.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

